src/test/deca/syntax/valid/class_instance.deca
// Description:
//    tests de programme syntaxiquement correct.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 04/01/2023
//
class A {
    protected int x ;
    int getX() {
        return x ;
    }
    void setX(int x) {
        this.x = x ;
    }
}

{
    A a = new A() ;
    a.setX(1) ;
    println("a.getX() = ", a.getX()) ;
}